[gd_scene load_steps=4 format=3 uid="uid://ddx5qx40g4lsi"]

[ext_resource type="Script" path="res://scripts/TokenLane.gd" id="1_eih4l"]

[sub_resource type="Gradient" id="Gradient_cs6qf"]
colors = PackedColorArray(0.732571, 0.343213, 0, 1, 0.435758, 0.352876, 3.28609e-08, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xuxon"]
gradient = SubResource("Gradient_cs6qf")

[node name="TokenLane" type="ColorRect"]
offset_left = 13.0
offset_top = 1.0
offset_right = 645.0
offset_bottom = 244.0
script = ExtResource("1_eih4l")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 629.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_xuxon")

[node name="TokenText" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 30.0
offset_right = 435.0
offset_bottom = 249.0
text = "Serving \"TOKEN\"
on \"NETWORK\"
Monitoring messages from:
NETWORK
NETWORK
NETWORK
NETWORK
NETWORK"

[node name="TokenText2" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 108.0
offset_right = 517.0
offset_bottom = 327.0
text = "NETWORK
NETWORK
NETWORK
NETWORK
NETWORK"

[node name="GasBalance" type="Label" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 5.0
offset_right = 275.0
offset_bottom = 28.0
text = "Gas: 0"
clip_text = true

[node name="TokenBalance" type="Label" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 4.0
offset_right = 517.0
offset_bottom = 27.0
text = "Tokens: 0"
clip_text = true

[node name="YourLiquidity" type="Label" parent="."]
layout_mode = 0
offset_left = 428.0
offset_top = 47.0
offset_right = 625.0
offset_bottom = 96.0
text = "Your Deposited Liquidity: 
0"
clip_text = true

[node name="ScryPoolLiquidity" type="Label" parent="."]
layout_mode = 0
offset_left = 428.0
offset_top = 100.0
offset_right = 625.0
offset_bottom = 149.0
text = "ScryPool Total Liquidity:
0"
clip_text = true

[node name="ToggleMonitoring" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 3.0
offset_right = 656.0
offset_bottom = 34.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
text = "Start Monitoring"

[node name="Deposit" type="Button" parent="."]
layout_mode = 0
offset_left = 276.0
offset_top = 31.0
offset_right = 412.0
offset_bottom = 62.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
text = "Deposit
"

[node name="Withdraw" type="Button" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 60.0
offset_right = 411.0
offset_bottom = 91.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
text = "Withdraw"

[node name="ManageLane" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 29.0
offset_bottom = 34.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
text = "Manage Lane"

[node name="LaneManager" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Background" type="ColorRect" parent="LaneManager"]
layout_mode = 0
offset_left = 20.0
offset_top = 12.0
offset_right = 609.0
offset_bottom = 230.0
color = Color(0, 0, 0, 1)

[node name="CheckPending" type="Button" parent="LaneManager"]
layout_mode = 0
offset_left = 34.0
offset_top = 166.0
offset_right = 208.0
offset_bottom = 220.0
mouse_default_cursor_shape = 2
text = "Check For
Pending Rewards"

[node name="Back" type="Button" parent="LaneManager"]
layout_mode = 0
offset_left = 34.0
offset_top = 22.0
offset_right = 136.0
offset_bottom = 53.0
mouse_default_cursor_shape = 2
text = "Back"

[node name="EditLaneConfig" type="Button" parent="LaneManager"]
layout_mode = 0
offset_left = 34.0
offset_top = 90.0
offset_right = 167.0
offset_bottom = 121.0
mouse_default_cursor_shape = 2
text = "Edit Lane Config"

[node name="Delete" type="Button" parent="LaneManager"]
layout_mode = 0
offset_left = 388.0
offset_top = 186.0
offset_right = 592.0
offset_bottom = 217.0
mouse_default_cursor_shape = 2
text = "Permanently Delete Lane"

[node name="DeleteCheck" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="Background" type="ColorRect" parent="DeleteCheck"]
layout_mode = 0
offset_left = 103.0
offset_top = 43.0
offset_right = 330.0
offset_bottom = 193.0
color = Color(0, 0, 0, 1)

[node name="Prompt" type="Label" parent="DeleteCheck"]
layout_mode = 0
offset_left = 133.0
offset_top = 55.0
offset_right = 307.0
offset_bottom = 130.0
text = "Are you sure you want
to permanently delete
this token lane?"

[node name="Yes" type="Button" parent="DeleteCheck"]
layout_mode = 0
offset_left = 110.0
offset_top = 153.0
offset_right = 204.0
offset_bottom = 184.0
mouse_default_cursor_shape = 2
text = "Yes, Delete"

[node name="No" type="Button" parent="DeleteCheck"]
layout_mode = 0
offset_left = 222.0
offset_top = 153.0
offset_right = 324.0
offset_bottom = 184.0
mouse_default_cursor_shape = 2
text = "No, Go Back"

[node name="LaneConfig" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Confirm" type="Button" parent="LaneConfig"]
layout_mode = 0
offset_left = 389.0
offset_top = 7.0
offset_right = 476.0
offset_bottom = 38.0
mouse_default_cursor_shape = 2
text = "Confirm"

[node name="Cancel" type="Button" parent="LaneConfig"]
layout_mode = 0
offset_left = 512.0
offset_top = 7.0
offset_right = 599.0
offset_bottom = 38.0
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="MinimumTransferLabel" type="Label" parent="LaneConfig"]
layout_mode = 0
offset_left = 22.0
offset_top = 53.0
offset_right = 171.0
offset_bottom = 76.0
text = "Minimum Transfer:"

[node name="MinimumTransfer" type="LineEdit" parent="LaneConfig"]
layout_mode = 0
offset_left = 232.0
offset_top = 51.0
offset_right = 601.0
offset_bottom = 82.0

[node name="MinimumRewardPercentLabel" type="Label" parent="LaneConfig"]
layout_mode = 0
offset_left = 22.0
offset_top = 89.0
offset_right = 228.0
offset_bottom = 112.0
text = "Minimum Reward Percent:"

[node name="MinimumRewardPercent" type="LineEdit" parent="LaneConfig"]
layout_mode = 0
offset_left = 232.0
offset_top = 87.0
offset_right = 601.0
offset_bottom = 118.0

[node name="MaximumGasFeeLabel" type="Label" parent="LaneConfig"]
layout_mode = 0
offset_left = 22.0
offset_top = 126.0
offset_right = 224.0
offset_bottom = 149.0
text = "Maximum Gas Fee:"

[node name="MaximumGasFee" type="LineEdit" parent="LaneConfig"]
layout_mode = 0
offset_left = 232.0
offset_top = 124.0
offset_right = 601.0
offset_bottom = 155.0

[node name="FlatRateThresholdLabel" type="Label" parent="LaneConfig"]
layout_mode = 0
offset_left = 22.0
offset_top = 163.0
offset_right = 224.0
offset_bottom = 212.0
text = "Flat Rate Threshold:
(optional)"

[node name="FlatRateThreshold" type="LineEdit" parent="LaneConfig"]
layout_mode = 0
offset_left = 232.0
offset_top = 161.0
offset_right = 601.0
offset_bottom = 192.0

[node name="WorstCase" type="Label" parent="LaneConfig"]
layout_mode = 0
offset_left = 245.0
offset_top = 207.0
offset_right = 582.0
offset_bottom = 236.0
text = "Worst Case: 0.00000 Gas for 0.00000 Tokens"
